--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.6",
     "parse-multipart": "1.0.4"
   },
   "devDependencies": {}
