--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
-    "multipart-formdata": "^1.1.0"
+    "multipart-formdata": "^1.1.0",
+    "sharp": "^0.26.3"
   },
   "devDependencies": {}
 }
