Revert "Adding Sharp"
This reverts commit 271bbdc542a7490e126ffcf066fe8cdf3a416afd.

--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
-    "multipart-formdata": "^1.1.0",
-    "sharp": "^0.26.3"
+    "multipart-formdata": "^1.1.0"
   },
   "devDependencies": {}
 }
