--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.6",
+    "jimp": "^0.16.1",
     "multipart-formdata": "^1.1.0"
   },
   "devDependencies": {}
