--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "@azure/data-tables": "^13.2.1",
     "@sendgrid/mail": "^7.2.6",
     "multipart-formdata": "^1.1.0",
+    "qrcode": "^1.5.3",
     "sharp": "^0.26.3"
   }
 }
