--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@azure/data-tables": "^13.2.1",
+    "@azure/storage-blob": "^12.16.0",
     "@sendgrid/mail": "^7.2.6",
     "multipart-formdata": "^1.1.0",
     "qrcode": "^1.5.3",
