--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.2.6",
     "multipart-formdata": "^1.1.0",
     "qrcode": "^1.5.3",
-    "sharp": "^0.26.3"
+    "sharp": "^0.26.3",
+    "nodemailer": "^6.9.14"
   }
 }
